adding MidiIO and MidiDevice classes, and a dropdown with available devices adding NoteLength numericUpDown ToggleBox now has a pitch property ToggleBoxes that are active and checked now Schedule a NoteOn followed by a NoteOff Even though Clock is a singleton object, Form1 can still use the Looper's Clock

--- a/MidiLooper/MidiLooper.csproj
+++ b/MidiLooper/MidiLooper.csproj
@@ -44,6 +44,8 @@
   <ItemGroup>
     <Compile Include="Clock.cs" />
     <Compile Include="Looper.cs" />
+    <Compile Include="MidiDevice.cs" />
+    <Compile Include="MidiIO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
