--- a/LooperTest/LooperTest.csproj
+++ b/LooperTest/LooperTest.csproj
@@ -53,9 +53,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MidiLooper\MidiLooper.csproj">
+    <ProjectReference Include="..\MidiLooper\MidiUtility.csproj">
       <Project>{9d4c43cd-db4c-4edb-96cc-a671c2595552}</Project>
-      <Name>MidiLooper</Name>
+      <Name>MidiUtility</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
