adding ToggleBoxRow class, representing a pitch-specific row of ToggleBoxes, renaming WinLooper to MidiSequencer

--- a/WinLooper/MidiSequencer.csproj
+++ b/WinLooper/MidiSequencer.csproj
@@ -58,6 +58,9 @@
     <Compile Include="ToggleBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ToggleBoxRow.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
